Add Swagger File
